# interview

./: Dockerfile  README.md  compute.py  config.py  docker-compose-dev.yml  docker-compose.yml  job.py  main.py  pyproject.toml  utils.py
client/: .env  .eslintcache  Dockerfile  package.json  tsconfig.json
client/src/: App.spec.tsx  App.tsx  Constants.ts  Types.ts  index.css  setupTests.ts
client/src/components/Film/: Film.spec.tsx  Film.tsx
client/src/components/FilmList/: FilmList.spec.tsx  FilmList.tsx
client/src/components/Spinner/: Spinner.spec.tsx  Spinner.tsx
client/src/hooks/: useFetch.spec.ts  useFetch.ts  useFetch.tsx
server/: Dockerfile  Dockerfile-dev  README.md  cache.py  compute.py  config.py  job.py  main.py  run_test.sh  utils.py
server/src/: cache.py  compute.py  compute_ext_api.py  job.py  log_config.py  main.py  utils.py
server/test/: config.py  fixtures.py  test_compute.py  test_compute_ext_api.py  test_main.py  test_sanity.py  test_utils.py
test/: fixture_data.py  fixtures.py  test_compute.py  test_main.py  test_sanity.py  test_utils.py
