[tool.poetry]
name = "sennder"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pytest = "^6.2.2"
requests = "^2.25.1"
fastapi = "^0.63.0"
uvicorn = "^0.13.3"
cachetools = "^4.2.1"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
